added timeline and session counter

--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -88,118 +88,183 @@
     </section>
     <!-- Main Section -->
     <section class="container-class-ty">
-      <p>
-        <strong>3 Steps to complete</strong> before the<br />
-        workshop starts
-      </p>
-      <form class="ty-card ty-review-card">
-        <h3>Review Your Contact Details</h3>
-        <div class="ty-form-group-parent">
-          <label for="email">Email ID (Optional)</label>
-          <div class="ty-form-group">
-            <input
-              type="email"
-              name="email"
-              id=""
-              placeholder="Ravi@gmail.com"
-            />
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="19"
-              height="19"
-              viewBox="0 0 19 19"
-              fill="none"
-            >
-              <path
-                d="M8.70898 1.58325H7.12565C3.16732 1.58325 1.58398 3.16659 1.58398 7.12492V11.8749C1.58398 15.8333 3.16732 17.4166 7.12565 17.4166H11.8757C15.834 17.4166 17.4173 15.8333 17.4173 11.8749V10.2916"
-                stroke="#666666"
-                stroke-opacity="0.6"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M12.698 2.39067L6.45966 8.629C6.22216 8.8665 5.98466 9.33358 5.93716 9.674L5.59674 12.0569C5.47008 12.9198 6.07966 13.5215 6.94258 13.4028L9.32549 13.0623C9.65799 13.0148 10.1251 12.7773 10.3705 12.5398L16.6088 6.3015C17.6855 5.22483 18.1922 3.974 16.6088 2.39067C15.0255 0.807334 13.7747 1.314 12.698 2.39067Z"
-                stroke="#666666"
-                stroke-opacity="0.6"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M11.8047 3.2854C12.3351 5.17748 13.8155 6.6579 15.7155 7.19623"
-                stroke="#666666"
-                stroke-opacity="0.6"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </div>
-        </div>
-        <!-- Phone Number Input with Country Dropdown -->
-        <div class="ty-form-group-parent">
-          <label for="email">Whatsapp Number</label>
-          <div class="ty-form-group">
-            <div class="phone-input">
-              <input
-                type="tel"
-                id="phone"
-                name="phone"
-                placeholder="WhatsApp Number*"
-                required
-              />
+      <div>
+        <div class="step-container">
+          <!-- completed -->
+          <div class="step completed">
+            <div class="v-stepper">
+              <div class="circle"></div>
+              <div class="line"></div>
             </div>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="19"
-              height="19"
-              viewBox="0 0 19 19"
-              fill="none"
-            >
-              <path
-                d="M8.70898 1.58325H7.12565C3.16732 1.58325 1.58398 3.16659 1.58398 7.12492V11.8749C1.58398 15.8333 3.16732 17.4166 7.12565 17.4166H11.8757C15.834 17.4166 17.4173 15.8333 17.4173 11.8749V10.2916"
-                stroke="#666666"
-                stroke-opacity="0.6"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M12.698 2.39067L6.45966 8.629C6.22216 8.8665 5.98466 9.33358 5.93716 9.674L5.59674 12.0569C5.47008 12.9198 6.07966 13.5215 6.94258 13.4028L9.32549 13.0623C9.65799 13.0148 10.1251 12.7773 10.3705 12.5398L16.6088 6.3015C17.6855 5.22483 18.1922 3.974 16.6088 2.39067C15.0255 0.807334 13.7747 1.314 12.698 2.39067Z"
-                stroke="#666666"
-                stroke-opacity="0.6"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M11.8047 3.2854C12.3351 5.17748 13.8155 6.6579 15.7155 7.19623"
-                stroke="#666666"
-                stroke-opacity="0.6"
-                stroke-miterlimit="10"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
+
+            <div class="step-content">
+              <p>
+                <strong>3 Steps to complete</strong> before the<br />
+                workshop starts
+              </p>
+            </div>
+          </div>
+
+          <!-- active -->
+          <div class="step active">
+            <div class="v-stepper">
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+            <div class="step-content">
+              <form class="ty-card ty-review-card">
+                <h3>Review Your Contact Details</h3>
+                <div class="ty-form-group-parent">
+                  <label for="email">Email ID (Optional)</label>
+                  <div class="ty-form-group">
+                    <input
+                      type="email"
+                      name="email"
+                      id=""
+                      placeholder="Ravi@gmail.com"
+                    />
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="19"
+                      height="19"
+                      viewBox="0 0 19 19"
+                      fill="none"
+                    >
+                      <path
+                        d="M8.70898 1.58325H7.12565C3.16732 1.58325 1.58398 3.16659 1.58398 7.12492V11.8749C1.58398 15.8333 3.16732 17.4166 7.12565 17.4166H11.8757C15.834 17.4166 17.4173 15.8333 17.4173 11.8749V10.2916"
+                        stroke="#666666"
+                        stroke-opacity="0.6"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M12.698 2.39067L6.45966 8.629C6.22216 8.8665 5.98466 9.33358 5.93716 9.674L5.59674 12.0569C5.47008 12.9198 6.07966 13.5215 6.94258 13.4028L9.32549 13.0623C9.65799 13.0148 10.1251 12.7773 10.3705 12.5398L16.6088 6.3015C17.6855 5.22483 18.1922 3.974 16.6088 2.39067C15.0255 0.807334 13.7747 1.314 12.698 2.39067Z"
+                        stroke="#666666"
+                        stroke-opacity="0.6"
+                        stroke-miterlimit="10"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M11.8047 3.2854C12.3351 5.17748 13.8155 6.6579 15.7155 7.19623"
+                        stroke="#666666"
+                        stroke-opacity="0.6"
+                        stroke-miterlimit="10"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </div>
+                </div>
+                <!-- Phone Number Input with Country Dropdown -->
+                <div class="ty-form-group-parent">
+                  <label for="email">Whatsapp Number</label>
+                  <div class="ty-form-group">
+                    <div class="phone-input">
+                      <input
+                        type="tel"
+                        id="phone"
+                        name="phone"
+                        placeholder="WhatsApp Number*"
+                        required
+                      />
+                    </div>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="19"
+                      height="19"
+                      viewBox="0 0 19 19"
+                      fill="none"
+                    >
+                      <path
+                        d="M8.70898 1.58325H7.12565C3.16732 1.58325 1.58398 3.16659 1.58398 7.12492V11.8749C1.58398 15.8333 3.16732 17.4166 7.12565 17.4166H11.8757C15.834 17.4166 17.4173 15.8333 17.4173 11.8749V10.2916"
+                        stroke="#666666"
+                        stroke-opacity="0.6"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M12.698 2.39067L6.45966 8.629C6.22216 8.8665 5.98466 9.33358 5.93716 9.674L5.59674 12.0569C5.47008 12.9198 6.07966 13.5215 6.94258 13.4028L9.32549 13.0623C9.65799 13.0148 10.1251 12.7773 10.3705 12.5398L16.6088 6.3015C17.6855 5.22483 18.1922 3.974 16.6088 2.39067C15.0255 0.807334 13.7747 1.314 12.698 2.39067Z"
+                        stroke="#666666"
+                        stroke-opacity="0.6"
+                        stroke-miterlimit="10"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M11.8047 3.2854C12.3351 5.17748 13.8155 6.6579 15.7155 7.19623"
+                        stroke="#666666"
+                        stroke-opacity="0.6"
+                        stroke-miterlimit="10"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </div>
+                </div>
+                <span
+                  >Issue registering mobile number ?
+                  <a href="http://">Contact Us</a></span
+                >
+              </form>
+            </div>
+          </div>
+
+          <!-- active -->
+          <div class="step active">
+            <div class="v-stepper">
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+
+            <div class="step-content">
+              <div class="ty-card">
+                <h3>Download Satvic App</h3>
+                <p>
+                  This is where you will experience the workshop and all the
+                  activities from
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- regular -->
+          <div class="step">
+            <div class="v-stepper">
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+
+            <div class="step-content">
+              <div class="ty-card">
+                <h3>We Have A Message For You</h3>
+                <!-- <video src=""></video> -->
+              </div>
+            </div>
           </div>
         </div>
-        <span
-          >Issue registering mobile number ?
-          <a href="http://">Contact Us</a></span
-        >
-      </form>
-      <div class="ty-card">
-        <h3>Download Satvic App</h3>
-        <p>
-          This is where you will experience the workshop and all the activities
-          from
-        </p>
-        
       </div>
-      <div class="ty-card">
-        <h3>We Have A Message For You</h3>
-        <video src=""></video>
+      <div class="ty-session-counter">
+        <h4>Your First Session Starts In</h4>
+        <div class="counter-card-container">
+          <div class="counter-card">
+            <h6>02</h6>
+            <p>Days</p>
+          </div>
+          <div class="counter-card">
+            <h6>02</h6>
+            <p>Days</p>
+          </div>
+          <div class="counter-card">
+            <h6>02</h6>
+            <p>Days</p>
+          </div>
+          <div class="counter-card">
+            <h6>02</h6>
+            <p>Days</p>
+          </div>
+        </div>
       </div>
-      <div class="ty-session-counter"></div>
     </section>
     <!-- Footer -->
     <footer class="footer-bottom">
@@ -215,6 +280,112 @@
       </div>
     </footer>
   </body>
-   <!-- Intl-Tel-Input JavaScript -->
-   <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.3/build/js/intlTelInput.min.js"></script>
+  <!-- Intl-Tel-Input JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.3/build/js/intlTelInput.min.js"></script>
 </html>
+
+<!-- <div>
+  <p>
+    <strong>3 Steps to complete</strong> before the<br />
+    workshop starts
+  </p>
+  <form class="ty-card ty-review-card">
+    <h3>Review Your Contact Details</h3>
+    <div class="ty-form-group-parent">
+      <label for="email">Email ID (Optional)</label>
+      <div class="ty-form-group">
+        <input type="email" name="email" id="" placeholder="Ravi@gmail.com" />
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="19"
+          height="19"
+          viewBox="0 0 19 19"
+          fill="none"
+        >
+          <path
+            d="M8.70898 1.58325H7.12565C3.16732 1.58325 1.58398 3.16659 1.58398 7.12492V11.8749C1.58398 15.8333 3.16732 17.4166 7.12565 17.4166H11.8757C15.834 17.4166 17.4173 15.8333 17.4173 11.8749V10.2916"
+            stroke="#666666"
+            stroke-opacity="0.6"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <path
+            d="M12.698 2.39067L6.45966 8.629C6.22216 8.8665 5.98466 9.33358 5.93716 9.674L5.59674 12.0569C5.47008 12.9198 6.07966 13.5215 6.94258 13.4028L9.32549 13.0623C9.65799 13.0148 10.1251 12.7773 10.3705 12.5398L16.6088 6.3015C17.6855 5.22483 18.1922 3.974 16.6088 2.39067C15.0255 0.807334 13.7747 1.314 12.698 2.39067Z"
+            stroke="#666666"
+            stroke-opacity="0.6"
+            stroke-miterlimit="10"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <path
+            d="M11.8047 3.2854C12.3351 5.17748 13.8155 6.6579 15.7155 7.19623"
+            stroke="#666666"
+            stroke-opacity="0.6"
+            stroke-miterlimit="10"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </div>
+    </div>
+  
+    <div class="ty-form-group-parent">
+      <label for="email">Whatsapp Number</label>
+      <div class="ty-form-group">
+        <div class="phone-input">
+          <input
+            type="tel"
+            id="phone"
+            name="phone"
+            placeholder="WhatsApp Number*"
+            required
+          />
+        </div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="19"
+          height="19"
+          viewBox="0 0 19 19"
+          fill="none"
+        >
+          <path
+            d="M8.70898 1.58325H7.12565C3.16732 1.58325 1.58398 3.16659 1.58398 7.12492V11.8749C1.58398 15.8333 3.16732 17.4166 7.12565 17.4166H11.8757C15.834 17.4166 17.4173 15.8333 17.4173 11.8749V10.2916"
+            stroke="#666666"
+            stroke-opacity="0.6"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <path
+            d="M12.698 2.39067L6.45966 8.629C6.22216 8.8665 5.98466 9.33358 5.93716 9.674L5.59674 12.0569C5.47008 12.9198 6.07966 13.5215 6.94258 13.4028L9.32549 13.0623C9.65799 13.0148 10.1251 12.7773 10.3705 12.5398L16.6088 6.3015C17.6855 5.22483 18.1922 3.974 16.6088 2.39067C15.0255 0.807334 13.7747 1.314 12.698 2.39067Z"
+            stroke="#666666"
+            stroke-opacity="0.6"
+            stroke-miterlimit="10"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <path
+            d="M11.8047 3.2854C12.3351 5.17748 13.8155 6.6579 15.7155 7.19623"
+            stroke="#666666"
+            stroke-opacity="0.6"
+            stroke-miterlimit="10"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </div>
+    </div>
+    <span
+      >Issue registering mobile number ? <a href="http://">Contact Us</a></span
+    >
+  </form>
+  <div class="ty-card">
+    <h3>Download Satvic App</h3>
+    <p>
+      This is where you will experience the workshop and all the activities from
+    </p>
+  </div>
+  <div class="ty-card">
+    <h3>We Have A Message For You</h3>
+    <video src=""></video>
+  </div>
+</div> -->
