fixed github issues

--- a/index.html
+++ b/index.html
@@ -146,90 +146,145 @@
     <section class="workshop-details mb-60">
       <div class="main-area container-class">
         <div class="workshop-iconbox">
+          <!-- Start Date -->
           <div class="ws-iconbox">
-            <div class="image-box">
-              <img
-                width="36"
-                height="36"
-                decoding="async"
-                data-nimg="1"
-                class="icon-list"
-                src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/calendar.svg"
-              />
-            </div>
-            <div>
-              <h4>Start Date</h4>
-              <p>2nd Dec, 2024</p>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <div class="image-box">
+                    <img
+                      width="36"
+                      height="36"
+                      decoding="async"
+                      data-nimg="1"
+                      class="icon-list"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/calendar.svg"
+                    />
+                  </div>
+                  <div class="ws-iconbox-text">
+                    <h4>Start Date</h4>
+                    <p>2nd Dec, 2024</p>
+                  </div>
+                </div>
+                <div class="flip-card-back">
+                  <p>Mark your calendar! The workshop is starting soon..</p>
+                </div>
+              </div>
             </div>
           </div>
+
+          <!-- Duration -->
           <div class="ws-iconbox">
-            <div class="image-box">
-              <img
-                width="36"
-                height="36"
-                decoding="async"
-                data-nimg="1"
-                class="icon-list"
-                src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/sand-timer.svg"
-              />
-            </div>
-            <div>
-              <h4>Duration</h4>
-              <p>21 Days</p>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <div class="image-box">
+                    <img
+                      width="36"
+                      height="36"
+                      decoding="async"
+                      data-nimg="1"
+                      class="icon-list"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/sand-timer.svg"
+                    />
+                  </div>
+                  <div class="ws-iconbox-text">
+                    <h4>Duration</h4>
+                    <p>21 Days</p>
+                  </div>
+                </div>
+                <div class="flip-card-back">
+                  <p>Because it takes 3 weeks to build a habit</p>
+                </div>
+              </div>
             </div>
           </div>
+
+          <!-- Time Slot -->
           <div class="ws-iconbox">
-            <div class="image-box">
-              <img
-                width="36"
-                height="36"
-                decoding="async"
-                data-nimg="1"
-                class="icon-list"
-                src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/clock.svg"
-              />
-            </div>
-            <div>
-              <h4>Choose Time Slot (IST)</h4>
-              <p>6-7 am | 8-9 am</p>
-              <p>4-5 pm | 8-9 pm</p>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <div class="image-box">
+                    <img
+                      width="36"
+                      height="36"
+                      decoding="async"
+                      data-nimg="1"
+                      class="icon-list"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/clock.svg"
+                    />
+                  </div>
+                  <div class="ws-iconbox-text">
+                    <h4>Choose Time Slot (IST)</h4>
+                    <p>6-7 am | 8-9 am</p>
+                    <p>4-5 pm | 8-9 pm</p>
+                  </div>
+                </div>
+                <div class="flip-card-back">
+                  <p>Recording for each session will be available for 24 hours..</p>
+                </div>
+              </div>
             </div>
           </div>
+
+          <!-- Language -->
           <div class="ws-iconbox">
-            <div class="image-box">
-              <img
-                width="36"
-                height="36"
-                decoding="async"
-                data-nimg="1"
-                class="icon-list"
-                src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/world.svg"
-              />
-            </div>
-            <div>
-              <h4>Language</h4>
-              <p>English</p>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <div class="image-box">
+                    <img
+                      width="36"
+                      height="36"
+                      decoding="async"
+                      data-nimg="1"
+                      class="icon-list"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/world.svg"
+                    />
+                  </div>
+                  <div class="ws-iconbox-text">
+                    <h4>Language</h4>
+                    <p>English</p>
+                  </div>
+                </div>
+                <div class="flip-card-back">
+                  <p>Language so simple that even a 5th-grader can understand. </p>
+                </div>
+              </div>
             </div>
           </div>
+
+          <!-- Contribution -->
           <div class="ws-iconbox">
-            <div class="image-box">
-              <img
-                width="36"
-                height="36"
-                decoding="async"
-                data-nimg="1"
-                class="icon-list"
-                src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/rupee.svg"
-              />
-            </div>
-            <div>
-              <h4>Contribution</h4>
-              <p>₹990 - ₹2990</p>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <div class="image-box">
+                    <img
+                      width="36"
+                      height="36"
+                      decoding="async"
+                      data-nimg="1"
+                      class="icon-list"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/rupee.svg"
+                    />
+                  </div>
+                  <div class="ws-iconbox-text">
+                    <h4>Contribution</h4>
+                    <p>₹990 - ₹2990</p>
+                  </div>
+                </div>
+                <div class="flip-card-back">
+                  <p>Select the amount you would like to contribute for this workshop. </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <!-- Workshop Details section with side bar -->
     <section>
       <div class="container-class main-content">
@@ -237,7 +292,7 @@
           <!-- Challenge starting in -->
           <div class="session-counter-home">
             <h3>Challenge starting in</h3>
-            <div class="ty-session-counter m-0">
+            <div class="session-counter m-0">
               <h4>Challenge starting in</h4>
               <div class="counter-card-container">
                 <div class="counter-card">
@@ -2591,7 +2646,9 @@
                   2nd Dec - 22nd Dec everyday
                 </p>
                 <form class="register-form form-gap-responsive">
-                  <div class="w-full d-flex flex-responsive gap-20">
+                  <div
+                    class="form-input-container w-full d-flex flex-responsive gap-20"
+                  >
                     <div class="width-responsive">
                       <input
                         class="form-input"
@@ -2610,7 +2667,9 @@
                       <div class="form-error">Please enter valid email</div>
                     </div>
                   </div>
-                  <div class="w-full d-flex flex-responsive gap-20">
+                  <div
+                    class="form-input-container w-full d-flex flex-responsive gap-20"
+                  >
                     <!-- Phone Number Input with Country Dropdown -->
                     <div class="width-responsive phone-input">
                       <input
@@ -2834,13 +2893,26 @@
         />
         <div class="footer-ul">
           <span>&copy; 2025 Satvic Movement </span> <span>|</span>
-          <a target="_blank" href="https://satvicmovement.org/privacy-policy">Privacy Policy</a>
+          <a target="_blank" href="https://satvicmovement.org/privacy-policy"
+            >Privacy Policy</a
+          >
         </div>
       </div>
     </footer>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <!-- Curriculum For The 21 Days -->
+
+  <!-- Workshop iconbox flip -->
+  <script>
+    const flipCards = document.querySelectorAll(".ws-iconbox");
+
+    flipCards.forEach((card) => {
+      card.addEventListener("click", function () {
+        this.querySelector(".flip-card-inner").classList.toggle("flipped");
+      });
+    });
+  </script>
   <script>
     $(".taTabs__nav").click(function () {
       var index = $(this).index() + 1;
