github issue fixed

--- a/index.html
+++ b/index.html
@@ -2264,7 +2264,7 @@
                 This Workshop Is <span class="not-text">Not</span> For:
               </h4>
               <p class="workshop-not-subheading">
-                The meal plan followed in this challenge will not be sufficient
+                The meal plan followed in this challenge will <strong style="text-decoration: underline;">not</strong> be sufficient
                 for:
               </p>
             </div>
@@ -2803,7 +2803,7 @@
         <div class="sidebar">
           <div class="sidebar-inner">
             <h3><strong>Ultimate Health</strong> Challenge</h3>
-            <hr class="sidebar-hr" />
+            <div class="sidebar-hr"></div>
             <ul class="sidebar-ul">
               <li class="sidebar-li">
                 <div class="sidebar-inner-icon-container">
@@ -2854,7 +2854,7 @@
                     src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/tickmark.svg"
                   />
                 </div>
-                <span>High energy and focus</span>
+                <span style="color: #666;">High energy and focus</span>
               </li>
               <li class="sidebar-li">
                 <div class="sidebar-inner-icon-container">
@@ -2864,7 +2864,7 @@
                     src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/tickmark.svg"
                   />
                 </div>
-                <span>Reach your optimal weight</span>
+                <span style="color: #666;">Reach your optimal weight</span>
               </li>
               <li class="sidebar-li">
                 <div class="sidebar-inner-icon-container">
@@ -2874,7 +2874,7 @@
                     src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/tickmark.svg"
                   />
                 </div>
-                <span>Eat and sleep better</span>
+                <span style="color: #666;">Eat and sleep better</span>
               </li>
             </ul>
             <div class="sidbar-data">
