added scholarship card

--- a/index.html
+++ b/index.html
@@ -915,13 +915,13 @@
                         </p>
                         <p>
                           <span class="pr-info-title">Practice</span>
-                          <span class="pr-info-details"
-                            >- Suryanamaskar A</span
-                          >
+                          <span class="pr-info-details">- Suryanamaskar A</span>
                         </p>
                         <p>
                           <span class="pr-info-title">Relaxation</span>
-                          <span class="pr-info-details">- Ujjayi Breathing</span>
+                          <span class="pr-info-details"
+                            >- Ujjayi Breathing</span
+                          >
                         </p>
                       </div>
                     </div>
@@ -957,9 +957,7 @@
                         </p>
                         <p>
                           <span class="pr-info-title">Practice</span>
-                          <span class="pr-info-details"
-                            >- Suryanamaskar B</span
-                          >
+                          <span class="pr-info-details">- Suryanamaskar B</span>
                         </p>
                         <p>
                           <span class="pr-info-title">Pranayama</span>
@@ -997,7 +995,9 @@
                       <div class="program-info">
                         <p>
                           <span class="pr-info-title">Knowledge</span>
-                          <span class="pr-info-details">- Ishwar Pranidhan</span>
+                          <span class="pr-info-details"
+                            >- Ishwar Pranidhan</span
+                          >
                         </p>
                         <p>
                           <span class="pr-info-title">Practice</span>
@@ -1007,9 +1007,7 @@
                         </p>
                         <p>
                           <span class="pr-info-title">Relaxation</span>
-                          <span class="pr-info-details"
-                            >- Kirtan</span
-                          >
+                          <span class="pr-info-details">- Kirtan</span>
                         </p>
                       </div>
                     </div>
@@ -1025,15 +1023,11 @@
                         </p>
                         <p>
                           <span class="pr-info-title">Practice</span>
-                          <span class="pr-info-details"
-                            >- Deep stretch</span
-                          >
+                          <span class="pr-info-details">- Deep stretch</span>
                         </p>
                         <p>
                           <span class="pr-info-title">Relaxation</span>
-                          <span class="pr-info-details"
-                            >- Savasana</span
-                          >
+                          <span class="pr-info-details">- Savasana</span>
                         </p>
                       </div>
                     </div>
@@ -1049,15 +1043,11 @@
                         </p>
                         <p>
                           <span class="pr-info-title">Practice</span>
-                          <span class="pr-info-details"
-                            >- Inversions</span
-                          >
+                          <span class="pr-info-details">- Inversions</span>
                         </p>
                         <p>
                           <span class="pr-info-title">Relaxation</span>
-                          <span class="pr-info-details"
-                            >- Quiz</span
-                          >
+                          <span class="pr-info-details">- Quiz</span>
                         </p>
                       </div>
                     </div>
@@ -1077,13 +1067,13 @@
                         </p>
                         <p>
                           <span class="pr-info-title">Practice</span>
-                          <span class="pr-info-details"
-                            >- Detox Yoga</span
-                          >
+                          <span class="pr-info-details">- Detox Yoga</span>
                         </p>
                         <p>
                           <span class="pr-info-title">Relaxation</span>
-                          <span class="pr-info-details">- 3 Types of Pranayama</span>
+                          <span class="pr-info-details"
+                            >- 3 Types of Pranayama</span
+                          >
                         </p>
                       </div>
                     </div>
@@ -1099,11 +1089,15 @@
                         </p>
                         <p>
                           <span class="pr-info-title">Practice</span>
-                          <span class="pr-info-details">- Yoga for stress relief</span>
+                          <span class="pr-info-details"
+                            >- Yoga for stress relief</span
+                          >
                         </p>
                         <p>
                           <span class="pr-info-title">Pranayama</span>
-                          <span class="pr-info-details">- 5 sense Meditation</span>
+                          <span class="pr-info-details"
+                            >- 5 sense Meditation</span
+                          >
                         </p>
                       </div>
                     </div>
@@ -1193,9 +1187,7 @@
                         </p>
                         <p>
                           <span class="pr-info-title">Relaxation</span>
-                          <span class="pr-info-details"
-                            >- ABCD of Yoga</span
-                          >
+                          <span class="pr-info-details">- ABCD of Yoga</span>
                         </p>
                       </div>
                     </div>
@@ -1217,9 +1209,7 @@
                         </p>
                         <p>
                           <span class="pr-info-title">Relaxation</span>
-                          <span class="pr-info-details"
-                            >- Quiz</span
-                          >
+                          <span class="pr-info-details">- Quiz</span>
                         </p>
                       </div>
                     </div>
@@ -2210,6 +2200,21 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+          <hr class="divider mt-40" />
+          <!-- Scholorship Card Section -->
+          <div class="scholarship-card mt-40">
+            <div class="scholarship-card-content">
+              <h4>Because everyone deserves a chance to heal</h4>
+              <p>
+                Join our wellness workshops for just ₹300 instead of ₹1000.
+                Apply now to avail this offer
+              </p>
+              <button>Apply for Discount</button>
+            </div>
+            <div class="scholarship-card-image-parent">
+              <img src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/because-everyone-deserves-a-chance-to-heal.jpg" alt="" />
             </div>
           </div>
           <hr class="divider mt-40" />
